--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,69640],[[4,5,6,0,[],[1,44,69586],[],[[7,0,1,0,[],[1,788,16249],[]],[8,0,1,0,[],[1,17038,16165],[]],[9,0,1,0,[],[1,33203,19580],[]],[10,0,1,0,[],[1,52784,16844],[]]],[],[4,4,4,4]]],[],[],[4,4,4,4]];
+window.output["suite"] = [1,2,3,0,[],[0,0,1274],[[4,5,6,0,[],[0,52,1216],[],[[7,0,1,0,[],[0,1230,9,8],[]],[9,0,1,0,[],[0,1241,8,8],[]],[10,0,1,0,[],[0,1250,9,8],[]],[11,0,1,0,[],[0,1260,6,8],[]]],[],[4,0,4,0]]],[],[],[4,0,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*CriarUsuarios","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\CriarUsuarios.robot","*CriarUsuarios.robot","*Criar Aluno","*Criar Cadi","*Criar Empresario","*Criar Professor"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*CriarUsuarios","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\CriarUsuarios.robot","*CriarUsuarios.robot","*Criar Aluno","*Setup failed:\nVariable '${PROD_URL}' not found.","*Criar Cadi","*Criar Empresario","*Criar Professor"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:09","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:09","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:10","fail":0,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":4},{"elapsed":"00:01:10","fail":0,"id":"s1-s1","label":"Antenas Robot.CriarUsuarios","name":"CriarUsuarios","pass":4}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":4,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":4,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:01","fail":4,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":0},{"elapsed":"00:00:01","fail":4,"id":"s1-s1","label":"Antenas Robot.CriarUsuarios","name":"CriarUsuarios","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1605570827006;
+window.output["baseMillis"] = 1606344332449;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 69722;
+window.output["generated"] = 1322;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
