Atualizacao do Script

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,90],[[4,5,6,0,[],[0,48,40],[],[[7,0,1,0,[],[0,64,5,8],[]],[9,0,1,0,[],[0,69,5,8],[]],[10,0,1,0,[],[0,75,7,8],[]],[11,0,1,0,[],[0,83,4,8],[]]],[],[4,0,4,0]]],[],[],[4,0,4,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,231097],[[4,5,6,0,[],[0,31,231053],[],[[7,0,1,0,[],[1,387,32919],[]],[8,0,1,0,[],[0,33306,57492,9],[]],[10,0,1,0,[],[0,90799,32595,11],[]],[12,0,1,0,[],[0,123395,57701,13],[]],[14,0,1,0,[],[0,181097,25630,15],[]],[16,0,1,0,[],[0,206728,24353,15],[]]],[],[6,1,6,1]]],[],[],[6,1,6,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*CriarUsuarios","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\CriarUsuarios.robot","*CriarUsuarios.robot","*Criar Aluno","*Setup failed:\nNo keyword with name 'Open Browser' found.","*Criar Cadi","*Criar Empresario","*Criar Professor"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*E2E","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\E2E.robot","*E2E.robot","*Logar Empresario e Criar Projeto","*Logar Cadi e Aprovacao da Criaco do Projeto","*Element with locator 'id=react-select-step-option-1' not found.","*Logar Empresario e Fazer Descricao Completa do Projeto","*Element with locator 'name=fullDescription' not found.","*Logar no CADI e Aprovacoes Seguintes","*Element with locator 'id=react-select-step-option-3' not found.","*Logar Professor e Vincular Aluno","*Element with locator 'id=react-select-project-option-0' not found.","*Logar Aluno e Entregar Projeto"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":4,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":4,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":4,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":0},{"elapsed":"00:00:00","fail":4,"id":"s1-s1","label":"Antenas Robot.CriarUsuarios","name":"CriarUsuarios","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:03:51","fail":5,"label":"Critical Tests","pass":1},{"elapsed":"00:03:51","fail":5,"label":"All Tests","pass":1}],[],[{"elapsed":"00:03:51","fail":5,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":1},{"elapsed":"00:03:51","fail":5,"id":"s1-s1","label":"Antenas Robot.E2E","name":"E2E","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1606526048515;
+window.output["baseMillis"] = 1606781046825;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 115;
+window.output["generated"] = 231269;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
