Atualizacao dos Scripts

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,231097],[[4,5,6,0,[],[0,31,231053],[],[[7,0,1,0,[],[1,387,32919],[]],[8,0,1,0,[],[0,33306,57492,9],[]],[10,0,1,0,[],[0,90799,32595,11],[]],[12,0,1,0,[],[0,123395,57701,13],[]],[14,0,1,0,[],[0,181097,25630,15],[]],[16,0,1,0,[],[0,206728,24353,15],[]]],[],[6,1,6,1]]],[],[],[6,1,6,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,96226],[[4,5,6,0,[],[1,31,96189],[],[[7,0,1,0,[],[1,478,22170],[]],[8,0,1,0,[],[1,22649,22586],[]],[9,0,1,0,[],[1,45236,28297],[]],[10,0,1,0,[],[1,73533,22685],[]]],[],[4,4,4,4]]],[],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*E2E","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\E2E.robot","*E2E.robot","*Logar Empresario e Criar Projeto","*Logar Cadi e Aprovacao da Criaco do Projeto","*Element with locator 'id=react-select-step-option-1' not found.","*Logar Empresario e Fazer Descricao Completa do Projeto","*Element with locator 'name=fullDescription' not found.","*Logar no CADI e Aprovacoes Seguintes","*Element with locator 'id=react-select-step-option-3' not found.","*Logar Professor e Vincular Aluno","*Element with locator 'id=react-select-project-option-0' not found.","*Logar Aluno e Entregar Projeto"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Antenas Robot","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot","*.","*CriarUsuarios","*C:\\Users\\baota\\Desktop\\FATEC\\Antenas_Sakaue\\Antenas_Robot\\Antenas_Robot\\CriarUsuarios.robot","*CriarUsuarios.robot","*Criar Aluno","*Criar Cadi","*Criar Empresario","*Criar Professor"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:03:51","fail":5,"label":"Critical Tests","pass":1},{"elapsed":"00:03:51","fail":5,"label":"All Tests","pass":1}],[],[{"elapsed":"00:03:51","fail":5,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":1},{"elapsed":"00:03:51","fail":5,"id":"s1-s1","label":"Antenas Robot.E2E","name":"E2E","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:36","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:36","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:36","fail":0,"id":"s1","label":"Antenas Robot","name":"Antenas Robot","pass":4},{"elapsed":"00:01:36","fail":0,"id":"s1-s1","label":"Antenas Robot.CriarUsuarios","name":"CriarUsuarios","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1606781046825;
+window.output["baseMillis"] = 1606784958927;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 231269;
+window.output["generated"] = 96314;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
